packages/agent_dart/macos/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_PhraseToSeedReq {
  struct wire_uint_8_list *phrase;
  struct wire_uint_8_list *password;
} wire_PhraseToSeedReq;
typedef struct wire_SeedToKeyReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *path;
} wire_SeedToKeyReq;
typedef struct wire_BLSVerifyReq {
  struct wire_uint_8_list *signature;
  struct wire_uint_8_list *message;
  struct wire_uint_8_list *public_key;
} wire_BLSVerifyReq;
typedef struct wire_ED25519FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_ED25519FromSeedReq;
typedef struct wire_ED25519SignReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *message;
} wire_ED25519SignReq;
typedef struct wire_ED25519VerifyReq {
  struct wire_uint_8_list *sig;
  struct wire_uint_8_list *message;
  struct wire_uint_8_list *pub_key;
} wire_ED25519VerifyReq;
typedef struct wire_Secp256k1FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_Secp256k1FromSeedReq;
typedef struct wire_Secp256k1SignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
} wire_Secp256k1SignWithSeedReq;
typedef struct wire_Secp256k1VerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_Secp256k1VerifyReq;
typedef struct wire_Secp256k1ShareSecretReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *public_key_raw_bytes;
} wire_Secp256k1ShareSecretReq;
typedef struct wire_Secp256k1RecoverReq {
  struct wire_uint_8_list *message_pre_hashed;
  struct wire_uint_8_list *signature_bytes;
  uint8_t *chain_id;
} wire_Secp256k1RecoverReq;
typedef struct wire_P256FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_P256FromSeedReq;
typedef struct wire_P256SignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
} wire_P256SignWithSeedReq;
typedef struct wire_P256VerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_P256VerifyReq;
typedef struct wire_P256ShareSecretReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *public_key_raw_bytes;
} wire_P256ShareSecretReq;
typedef struct wire_SchnorrFromSeedReq {
  struct wire_uint_8_list *seed;
} wire_SchnorrFromSeedReq;
typedef struct wire_SchnorrSignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *aux_rand;
} wire_SchnorrSignWithSeedReq;
typedef struct wire_SchnorrVerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_SchnorrVerifyReq;
typedef struct wire_AesEncryptReq {
  struct wire_uint_8_list *key;
  struct wire_uint_8_list *iv;
  struct wire_uint_8_list *message;
} wire_AesEncryptReq;
typedef struct wire_AesDecryptReq {
  struct wire_uint_8_list *key;
  struct wire_uint_8_list *iv;
  struct wire_uint_8_list *cipher_text;
} wire_AesDecryptReq;
typedef struct wire_PBKDFDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t c;
} wire_PBKDFDeriveReq;
typedef struct wire_ScriptDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t n;
  uint32_t p;
  uint32_t r;
} wire_ScriptDeriveReq;
typedef struct wire_PsbtToTxidReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtToTxidReq;
typedef struct wire_PsbtToTxReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtToTxReq;
typedef struct wire_PsbtFreeRateReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtFreeRateReq;
typedef struct wire_PsbtFreeAmountReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtFreeAmountReq;
typedef struct wire_PsbtCombineReq {
  struct wire_uint_8_list *psbt_str;
  struct wire_uint_8_list *other;
} wire_PsbtCombineReq;
typedef struct wire_GetAddressReq {
  struct wire_uint_8_list *public_key;
  struct wire_uint_8_list *network;
} wire_GetAddressReq;
typedef struct wire_PsbtWalletReq {
  struct wire_uint_8_list *prv;
  struct wire_uint_8_list *address_type;
  struct wire_uint_8_list *network;
} wire_PsbtWalletReq;
typedef struct wire_ScriptAmount {
  struct wire_uint_8_list *script;
  uint64_t amount;
} wire_ScriptAmount;
typedef struct wire_list_script_amount {
  struct wire_ScriptAmount *ptr;
  int32_t len;
} wire_list_script_amount;
typedef struct wire_OutPoint {
  struct wire_uint_8_list *txid;
  uint32_t vout;
} wire_OutPoint;
typedef struct wire_list_out_point {
  struct wire_OutPoint *ptr;
  int32_t len;
} wire_list_out_point;
typedef struct wire_TxBulderReq {
  struct wire_PsbtWalletReq wallet_req;
  struct wire_list_script_amount *recipients;
  struct wire_list_out_point *utxos;
  struct wire_list_out_point *unspendable;
  bool manually_selected_only;
  bool only_spend_change;
  bool do_not_spend_change;
  float *fee_rate;
  uint64_t *fee_absolute;
  bool drain_wallet;
  struct wire_uint_8_list *drain_to;
  bool enable_rbf;
  uint32_t *n_sequence;
  struct wire_uint_8_list *data;
} wire_TxBulderReq;
typedef struct wire_AddressIndex_New {

} wire_AddressIndex_New;
typedef struct wire_AddressIndex_LastUnused {

} wire_AddressIndex_LastUnused;
typedef struct wire_AddressIndex_Peek {
  uint32_t index;
} wire_AddressIndex_Peek;
typedef union AddressIndexKind {
  struct wire_AddressIndex_New *New;
  struct wire_AddressIndex_LastUnused *LastUnused;
  struct wire_AddressIndex_Peek *Peek;
} AddressIndexKind;
typedef struct DartCObject *WireSyncReturn;
struct wire_ScriptDeriveReq *new_box_autoadd_script_derive_req_0(void);
struct wire_Secp256k1FromSeedReq *new_box_autoadd_secp_256_k_1_from_seed_req_0(void);
struct wire_Secp256k1RecoverReq *new_box_autoadd_secp_256_k_1_recover_req_0(void);
struct wire_Secp256k1ShareSecretReq *new_box_autoadd_secp_256_k_1_share_secret_req_0(void);
struct wire_Secp256k1SignWithSeedReq *new_box_autoadd_secp_256_k_1_sign_with_seed_req_0(void);
struct wire_Secp256k1VerifyReq *new_box_autoadd_secp_256_k_1_verify_req_0(void);
struct wire_SeedToKeyReq *new_box_autoadd_seed_to_key_req_0(void);
struct wire_TxBulderReq *new_box_autoadd_tx_bulder_req_0(void);
uint32_t *new_box_autoadd_u32_0(uint32_t value);
uint64_t *new_box_autoadd_u64_0(uint64_t value);
uint8_t *new_box_autoadd_u8_0(uint8_t value);
struct wire_list_out_point *new_list_out_point_0(int32_t len);
struct wire_list_script_amount *new_list_script_amount_0(int32_t len);
struct wire_uint_8_list *new_uint_8_list_0(int32_t len);
union AddressIndexKind *inflate_AddressIndex_Peek(void);
void free_WireSyncReturn(WireSyncReturn ptr);