packages/agent_dart_ffi/lib/src/bridge_generated.io.dart


  late final _new_box_autoadd_script_derive_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_ScriptDeriveReq> Function()>>('new_box_autoadd_script_derive_req_0');
  late final _new_box_autoadd_script_derive_req_0 = _new_box_autoadd_script_derive_req_0Ptr.asFunction<ffi.Pointer<wire_ScriptDeriveReq> Function()>();

  ffi.Pointer<wire_Secp256k1FromSeedReq> new_box_autoadd_secp_256_k_1_from_seed_req_0() {
    return _new_box_autoadd_secp_256_k_1_from_seed_req_0();
  }

  late final _new_box_autoadd_secp_256_k_1_from_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_Secp256k1FromSeedReq> Function()>>('new_box_autoadd_secp_256_k_1_from_seed_req_0');
  late final _new_box_autoadd_secp_256_k_1_from_seed_req_0 = _new_box_autoadd_secp_256_k_1_from_seed_req_0Ptr.asFunction<ffi.Pointer<wire_Secp256k1FromSeedReq> Function()>();

  ffi.Pointer<wire_Secp256k1RecoverReq> new_box_autoadd_secp_256_k_1_recover_req_0() {
    return _new_box_autoadd_secp_256_k_1_recover_req_0();
  }

  late final _new_box_autoadd_secp_256_k_1_recover_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_Secp256k1RecoverReq> Function()>>('new_box_autoadd_secp_256_k_1_recover_req_0');
  late final _new_box_autoadd_secp_256_k_1_recover_req_0 = _new_box_autoadd_secp_256_k_1_recover_req_0Ptr.asFunction<ffi.Pointer<wire_Secp256k1RecoverReq> Function()>();

  ffi.Pointer<wire_Secp256k1ShareSecretReq> new_box_autoadd_secp_256_k_1_share_secret_req_0() {
    return _new_box_autoadd_secp_256_k_1_share_secret_req_0();
  }

  late final _new_box_autoadd_secp_256_k_1_share_secret_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_Secp256k1ShareSecretReq> Function()>>('new_box_autoadd_secp_256_k_1_share_secret_req_0');
  late final _new_box_autoadd_secp_256_k_1_share_secret_req_0 = _new_box_autoadd_secp_256_k_1_share_secret_req_0Ptr.asFunction<ffi.Pointer<wire_Secp256k1ShareSecretReq> Function()>();

  ffi.Pointer<wire_Secp256k1SignWithSeedReq> new_box_autoadd_secp_256_k_1_sign_with_seed_req_0() {
    return _new_box_autoadd_secp_256_k_1_sign_with_seed_req_0();
  }

  late final _new_box_autoadd_secp_256_k_1_sign_with_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_Secp256k1SignWithSeedReq> Function()>>('new_box_autoadd_secp_256_k_1_sign_with_seed_req_0');
  late final _new_box_autoadd_secp_256_k_1_sign_with_seed_req_0 = _new_box_autoadd_secp_256_k_1_sign_with_seed_req_0Ptr.asFunction<ffi.Pointer<wire_Secp256k1SignWithSeedReq> Function()>();

  ffi.Pointer<wire_Secp256k1VerifyReq> new_box_autoadd_secp_256_k_1_verify_req_0() {
    return _new_box_autoadd_secp_256_k_1_verify_req_0();
  }

  late final _new_box_autoadd_secp_256_k_1_verify_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_Secp256k1VerifyReq> Function()>>('new_box_autoadd_secp_256_k_1_verify_req_0');
  late final _new_box_autoadd_secp_256_k_1_verify_req_0 = _new_box_autoadd_secp_256_k_1_verify_req_0Ptr.asFunction<ffi.Pointer<wire_Secp256k1VerifyReq> Function()>();

  ffi.Pointer<wire_SeedToKeyReq> new_box_autoadd_seed_to_key_req_0() {
    return _new_box_autoadd_seed_to_key_req_0();
  }

  late final _new_box_autoadd_seed_to_key_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_SeedToKeyReq> Function()>>('new_box_autoadd_seed_to_key_req_0');
  late final _new_box_autoadd_seed_to_key_req_0 = _new_box_autoadd_seed_to_key_req_0Ptr.asFunction<ffi.Pointer<wire_SeedToKeyReq> Function()>();

  ffi.Pointer<wire_TxBulderReq> new_box_autoadd_tx_bulder_req_0() {
    return _new_box_autoadd_tx_bulder_req_0();
  }

  late final _new_box_autoadd_tx_bulder_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_TxBulderReq> Function()>>('new_box_autoadd_tx_bulder_req_0');
  late final _new_box_autoadd_tx_bulder_req_0 = _new_box_autoadd_tx_bulder_req_0Ptr.asFunction<ffi.Pointer<wire_TxBulderReq> Function()>();

  ffi.Pointer<ffi.Uint32> new_box_autoadd_u32_0(
    int value,
  ) {
    return _new_box_autoadd_u32_0(
      value,
    );
  }

  late final _new_box_autoadd_u32_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>('new_box_autoadd_u32_0');
  late final _new_box_autoadd_u32_0 = _new_box_autoadd_u32_0Ptr.asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<ffi.Uint64> new_box_autoadd_u64_0(
    int value,
  ) {
    return _new_box_autoadd_u64_0(
      value,
    );
  }

  late final _new_box_autoadd_u64_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint64> Function(ffi.Uint64)>>('new_box_autoadd_u64_0');
  late final _new_box_autoadd_u64_0 = _new_box_autoadd_u64_0Ptr.asFunction<ffi.Pointer<ffi.Uint64> Function(int)>();

  ffi.Pointer<ffi.Uint8> new_box_autoadd_u8_0(
    int value,
  ) {
    return _new_box_autoadd_u8_0(
      value,
    );
  }

  late final _new_box_autoadd_u8_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Uint8)>>('new_box_autoadd_u8_0');
  late final _new_box_autoadd_u8_0 = _new_box_autoadd_u8_0Ptr.asFunction<ffi.Pointer<ffi.Uint8> Function(int)>();

  ffi.Pointer<wire_list_out_point> new_list_out_point_0(
    int len,
  ) {
    return _new_list_out_point_0(
      len,
    );
  }

  late final _new_list_out_point_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_list_out_point> Function(ffi.Int32)>>('new_list_out_point_0');
  late final _new_list_out_point_0 = _new_list_out_point_0Ptr.asFunction<ffi.Pointer<wire_list_out_point> Function(int)>();

  ffi.Pointer<wire_list_script_amount> new_list_script_amount_0(
    int len,
  ) {
    return _new_list_script_amount_0(
      len,
    );
  }

  late final _new_list_script_amount_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_list_script_amount> Function(ffi.Int32)>>('new_list_script_amount_0');
  late final _new_list_script_amount_0 = _new_list_script_amount_0Ptr.asFunction<ffi.Pointer<wire_list_script_amount> Function(int)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_uint_8_list> Function(ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr.asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  ffi.Pointer<AddressIndexKind> inflate_AddressIndex_Peek() {
    return _inflate_AddressIndex_Peek();
  }

  late final _inflate_AddressIndex_PeekPtr = _lookup<ffi.NativeFunction<ffi.Pointer<AddressIndexKind> Function()>>('inflate_AddressIndex_Peek');
  late final _inflate_AddressIndex_Peek = _inflate_AddressIndex_PeekPtr.asFunction<ffi.Pointer<AddressIndexKind> Function()>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr = _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>('free_WireSyncReturn');
  late final _free_WireSyncReturn = _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_PhraseToSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> phrase;

  external ffi.Pointer<wire_uint_8_list> password;
}

class wire_SeedToKeyReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;

  external ffi.Pointer<wire_uint_8_list> path;
}

class wire_BLSVerifyReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> signature;

  external ffi.Pointer<wire_uint_8_list> message;

  external ffi.Pointer<wire_uint_8_list> public_key;
}

class wire_ED25519FromSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;
}

class wire_ED25519SignReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;

  external ffi.Pointer<wire_uint_8_list> message;
}

class wire_ED25519VerifyReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> sig;

  external ffi.Pointer<wire_uint_8_list> message;

  external ffi.Pointer<wire_uint_8_list> pub_key;
}

class wire_Secp256k1FromSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;
}

class wire_Secp256k1SignWithSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> msg;

  external ffi.Pointer<wire_uint_8_list> seed;
}

class wire_Secp256k1VerifyReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> message_hash;

  external ffi.Pointer<wire_uint_8_list> signature_bytes;

  external ffi.Pointer<wire_uint_8_list> public_key_bytes;
}

class wire_Secp256k1ShareSecretReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;

  external ffi.Pointer<wire_uint_8_list> public_key_raw_bytes;
}

class wire_Secp256k1RecoverReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> message_pre_hashed;

  external ffi.Pointer<wire_uint_8_list> signature_bytes;

  external ffi.Pointer<ffi.Uint8> chain_id;
}

class wire_P256FromSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;
}

class wire_P256SignWithSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> msg;

  external ffi.Pointer<wire_uint_8_list> seed;
}

class wire_P256VerifyReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> message_hash;

  external ffi.Pointer<wire_uint_8_list> signature_bytes;

  external ffi.Pointer<wire_uint_8_list> public_key_bytes;
}

class wire_P256ShareSecretReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;

  external ffi.Pointer<wire_uint_8_list> public_key_raw_bytes;
}

class wire_SchnorrFromSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> seed;
}

class wire_SchnorrSignWithSeedReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> msg;

  external ffi.Pointer<wire_uint_8_list> seed;

  external ffi.Pointer<wire_uint_8_list> aux_rand;
}

class wire_SchnorrVerifyReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> message_hash;

  external ffi.Pointer<wire_uint_8_list> signature_bytes;

  external ffi.Pointer<wire_uint_8_list> public_key_bytes;
}

class wire_AesEncryptReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> key;

  external ffi.Pointer<wire_uint_8_list> iv;

  external ffi.Pointer<wire_uint_8_list> message;
}

class wire_AesDecryptReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> key;

  external ffi.Pointer<wire_uint_8_list> iv;

  external ffi.Pointer<wire_uint_8_list> cipher_text;
}

class wire_PBKDFDeriveReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> password;

  external ffi.Pointer<wire_uint_8_list> salt;

  @ffi.Uint32()
  external int c;
}

class wire_ScriptDeriveReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> password;

  external ffi.Pointer<wire_uint_8_list> salt;

  @ffi.Uint32()
  external int n;

  @ffi.Uint32()
  external int p;

  @ffi.Uint32()
  external int r;
}

class wire_PsbtToTxidReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> psbt_str;
}

class wire_PsbtToTxReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> psbt_str;
}

class wire_PsbtFreeRateReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> psbt_str;
}

class wire_PsbtFreeAmountReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> psbt_str;
}

class wire_PsbtCombineReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> psbt_str;

  external ffi.Pointer<wire_uint_8_list> other;
}

class wire_GetAddressReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> public_key;

  external ffi.Pointer<wire_uint_8_list> network;
}

class wire_PsbtWalletReq extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> prv;

  external ffi.Pointer<wire_uint_8_list> address_type;

  external ffi.Pointer<wire_uint_8_list> network;
}

class wire_ScriptAmount extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> script;

  @ffi.Uint64()
  external int amount;
}
